--- a/modules/web/src/com/rtcab/cfd/web/messages.properties
+++ b/modules/web/src/com/rtcab/cfd/web/messages.properties
@@ -2,10 +2,10 @@
 application.caption = CFD
 application.logoLabel = Fire Departments
 application.logoImage = branding/app-icon-menu.png
-application.welcomeText = Welcome to CUBA Fire Departments!
+application.welcomeText = CFD - CUBA Fire Departments
 
 loginWindow.caption = Fire Departments
-loginWindow.welcomeLabel = Welcome to CUBA Fire Departments!
+loginWindow.welcomeLabel = Welcome to Fire Departments!
 loginWindow.logoImage = branding/app-icon-login.png
 
 menu_config.application-cfd = Fire Departments
