added operation UI

--- a/modules/global/src/com/rtcab/cfd/entity/messages.properties
+++ b/modules/global/src/com/rtcab/cfd/entity/messages.properties
@@ -2,21 +2,21 @@ Course=Course
 Course.participants=Participants
 Course.startsAt=Starts at
 Course.endsAt=Ends at
-Course.courseLeader=Course leader
+Course.courseLeader=Course Leader
 Employee=Employee
 Employee.name=Name
-Employee.firstName=First name
+Employee.firstName=First Name
 Employee.birthdate=Birthdate
 Employee.courses=Courses
-Employee.fireDepartment=Fire department
-FireDepartment=Fire department
+Employee.fireDepartment=Fire Department
+FireDepartment=Fire Department
 FireDepartment.name=Name
 FireDepartment.employees=Employees
 FireDepartment.street=Street
 FireDepartment.housenumber=Housenumber
 FireDepartment.city=City
-FireDepartment.postalCode=Postal code
-FireDepartmentType=Fire department type
+FireDepartment.postalCode=Postal Code
+FireDepartmentType=Fire Department Type
 FireDepartmentType.VOLUNTEER=Volunteer
 FireDepartmentType.PROFESSIONAL=Professional
 FireDepartment.type=Type
@@ -24,13 +24,13 @@ FireDepartment.operations=Operations
 CourseTopic=Course topic
 CourseTopic.title=Title
 CourseTopic.summary=Summary
-CourseTopicLevel=Course topic level
+CourseTopicLevel=Course Topic Level
 CourseTopicLevel.BEGINNER=Beginner
 CourseTopicLevel.INTERMEDIATE=Intermediate
 CourseTopicLevel.EXPERT=Expert
 CourseTopic.level=Level
 CourseTopic.content=Content
-CourseTopicAttachment=Course topic attachment
+CourseTopicAttachment=Course Topic Attachment
 CourseTopicAttachment.file=File
 CourseTopicAttachment.name=Name
 CourseTopicAttachment.description=Description
@@ -38,15 +38,15 @@ CourseTopicAttachment.courseTopic=Course topic
 CourseTopic.attachments=Attachments
 Course.topic=Topic
 Operation=Operation
-Operation.responsibleDepartment=Responsible department
-Operation.operationLead=Operation lead
+Operation.responsibleDepartment=Responsible Department
+Operation.operationLead=Operation Lead
 Operation.startsAt=Started at
 Operation.endsAt=Ends at
 OperationType=Operation type
 OperationType.name=Name
 OperationType.description=Description
 Operation.type=Type
-OperationReport=Operation report
+OperationReport=Operation Report
 OperationReport.creator=Creator
 OperationReport.title=Title
 OperationReport.summary=Summary
@@ -54,10 +54,11 @@ OperationReport.content=Content
 OperationReport.operation=Operation
 OperationReport.classification=Classification
 Operation.reports=Reports
+Operation.title=Title
 ReportClassification=Report classification
 ReportClassification.UNCLASSIFIED=Unclassified
 ReportClassification.CONFIDENTIAL=Confidential
-ReportClassification.TOP_SECRET=Top secret
+ReportClassification.TOP_SECRET=Top Secret
 Equipment=Equipment
 Equipment.name=Name
 EquipmentType=Equipment type
@@ -66,15 +67,15 @@ EquipmentType.SUPPLIES=Supplies
 EquipmentType.TUBE=Tube
 Equipment.type=Type
 Equipment.maintenances=Maintenances
-Equipment.fireDepartment=Fire department
+Equipment.fireDepartment=Fire Department
 Maintenance=Maintenance
 Maintenance.equipment=Equipment
 Maintenance.scheduledAt=Scheduled at
 Maintenance.performedAt=Performed at
 Maintenance.performedBy=Performed by
-MaintenanceStatus=Maintenance status
+MaintenanceStatus=Maintenance Status
 MaintenanceStatus.CREATED=Created
-MaintenanceStatus.IN_PROGRESS=In progress
+MaintenanceStatus.IN_PROGRESS=In Progress
 MaintenanceStatus.CANCELLED=Cancelled
 MaintenanceStatus.DONE=Done
 Maintenance.status=Status
