--- a/modules/web/src/com/rtcab/cfd/web/messages.properties
+++ b/modules/web/src/com/rtcab/cfd/web/messages.properties
@@ -16,3 +16,4 @@ menu_config.cfd_Employee.browse=Employees
 menu_config.cfd_FireDepartment.browse=Fire Departments
 menu_config.cfd_Maintenance.browse=Maintenances
 menu_config.cfd_Equipment.browse=Equipment
+menu_config.cfd_Operation.browse=Operations
