Course Enrollment BPMN example

--- a/modules/global/src/com/rtcab/cfd/entity/messages.properties
+++ b/modules/global/src/com/rtcab/cfd/entity/messages.properties
@@ -9,6 +9,7 @@ Employee.firstName=First Name
 Employee.birthdate=Birthdate
 Employee.courses=Courses
 Employee.fireDepartment=Fire Department
+Employee.user=User
 FireDepartment=Fire Department
 FireDepartment.name=Name
 FireDepartment.employees=Employees
