--- a/modules/web/src/com/rtcab/cfd/web/screens/course/messages.properties
+++ b/modules/web/src/com/rtcab/cfd/web/screens/course/messages.properties
@@ -1,2 +1,5 @@
 courseBrowse.caption=Courses
 courseEdit.caption=Course
+enroll=Enroll to Course
+enrollmentOnlyPossibleForEmployees=Enrollment is only possible for Employees
+enrollmentRequestSend=Enrollment Request was send to Course Leader
