Equipment Maintenance BPMN Example

--- a/modules/global/src/com/rtcab/cfd/entity/messages.properties
+++ b/modules/global/src/com/rtcab/cfd/entity/messages.properties
@@ -10,6 +10,7 @@ Employee.birthdate=Birthdate
 Employee.courses=Courses
 Employee.fireDepartment=Fire Department
 Employee.user=User
+Employee.mechanic=Mechanic
 FireDepartment=Fire Department
 FireDepartment.name=Name
 FireDepartment.employees=Employees
@@ -22,6 +23,7 @@ FireDepartmentType.VOLUNTEER=Volunteer
 FireDepartmentType.PROFESSIONAL=Professional
 FireDepartment.type=Type
 FireDepartment.operations=Operations
+FireDepartment.fireChief=Fire chief
 CourseTopic=Course topic
 CourseTopic.title=Title
 CourseTopic.summary=Summary
@@ -69,6 +71,7 @@ EquipmentType.TUBE=Tube
 Equipment.type=Type
 Equipment.maintenances=Maintenances
 Equipment.fireDepartment=Fire Department
+Equipment.maintenanceInterval=Maintenance interval
 Maintenance=Maintenance
 Maintenance.equipment=Equipment
 Maintenance.scheduledAt=Scheduled at
@@ -80,3 +83,7 @@ MaintenanceStatus.IN_PROGRESS=In Progress
 MaintenanceStatus.CANCELLED=Cancelled
 MaintenanceStatus.DONE=Done
 Maintenance.status=Status
+MaintenanceInterval=Maintenance interval
+MaintenanceInterval.YEARLY=Yearly
+MaintenanceInterval.QUARTERLY=Quarterly
+MaintenanceInterval.MONTHLY=Monthly
