--- a/modules/web/src/com/rtcab/cfd/web/screens/equipment/messages.properties
+++ b/modules/web/src/com/rtcab/cfd/web/screens/equipment/messages.properties
@@ -1,2 +1,5 @@
 equipmentBrowse.caption=Equipment
 equipmentEdit.caption=Equipment
+scheduleMaintenance=Schedule Maintenance
+noEquipmentSelected=No Equipment selected
+maintenanceScheduled=Maintenance scheduled...
