--- a/modules/web/src/com/rtcab/cfd/web/screens/maintenance/messages.properties
+++ b/modules/web/src/com/rtcab/cfd/web/screens/maintenance/messages.properties
@@ -1,2 +1,17 @@
-maintenanceBrowse.caption=Maintenances
 maintenance.editorMainTab.caption=Maintenance
+maintenanceSchedule.caption=Schedule Maintenance
+scheduledHelpText=Scheduled between %s and %s
+scheduling=Scheduling
+equipmentInformation=Equipment Information
+previousMaintenances=Previous Maintenances
+maintenanceBrowse.caption=Maintenances
+maintenanceEdit.caption=Maintenance
+scheduled=Scheduled
+needToReschedule=Need to Reschedule
+rescheduleMaintenance.caption=Rescheduled required
+menuCaption=Reschedule Maintenance
+needToRescheduleHelpText=%s requested a re-schedule for the Maintenance. \n\
+  Original Scheduled Range: %s - %s
+rescheduledAt=Rescheduled At
+rescheduledBtn=Reschedule
+rescheduleDateRequired=Reschedule At required
