finish example equipment-maintenance with DMN

--- a/modules/web/src/com/rtcab/cfd/web/screens/maintenance/messages.properties
+++ b/modules/web/src/com/rtcab/cfd/web/screens/maintenance/messages.properties
@@ -15,3 +15,7 @@ needToRescheduleHelpText=%s requested a re-schedule for the Maintenance. \n\
 rescheduledAt=Rescheduled At
 rescheduledBtn=Reschedule
 rescheduleDateRequired=Reschedule At required
+simulateScheduling=Simulate
+simulateSchedulingContextHelpText=When checked the Task appears in the next minute for the assigned Mechanic. \n\n\
+Otherwise the Task will only occur on \n\
+  the morning of the selected Scheduling Date.
