better maintenance process

--- a/modules/global/src/com/rtcab/cfd/entity/messages.properties
+++ b/modules/global/src/com/rtcab/cfd/entity/messages.properties
@@ -11,6 +11,7 @@ Employee.courses=Courses
 Employee.fireDepartment=Fire Department
 Employee.user=User
 Employee.mechanic=Mechanic
+Employee.avatar=Avatar
 FireDepartment=Fire Department
 FireDepartment.name=Name
 FireDepartment.employees=Employees
@@ -71,7 +72,9 @@ EquipmentType.TUBE=Tube
 Equipment.type=Type
 Equipment.maintenances=Maintenances
 Equipment.fireDepartment=Fire Department
-Equipment.maintenanceInterval=Maintenance interval
+Equipment.maintenanceInterval=Maintenance Interval
+Equipment.operationalManual=Operational Manual
+Equipment.generalMaintenanceRemarks=General Maintenance Remarks
 Maintenance=Maintenance
 Maintenance.equipment=Equipment
 Maintenance.scheduledAt=Scheduled at
@@ -87,3 +90,5 @@ MaintenanceInterval=Maintenance interval
 MaintenanceInterval.YEARLY=Yearly
 MaintenanceInterval.QUARTERLY=Quarterly
 MaintenanceInterval.MONTHLY=Monthly
+Maintenance.comment=Comment
+Maintenance.nextMaintenanceRemark=Remarks for next Maintenance
