--- a/modules/web/src/com/rtcab/cfd/web/screens/maintenance/messages.properties
+++ b/modules/web/src/com/rtcab/cfd/web/screens/maintenance/messages.properties
@@ -6,7 +6,7 @@ equipmentInformation=Equipment Information
 previousMaintenances=Previous Maintenances
 maintenanceBrowse.caption=Maintenances
 maintenanceEdit.caption=Maintenance
-scheduled=Scheduled
+scheduled=Schedule
 needToReschedule=Need to Reschedule
 rescheduleMaintenance.caption=Rescheduled required
 menuCaption=Reschedule Maintenance
@@ -19,3 +19,12 @@ simulateScheduling=Simulate
 simulateSchedulingContextHelpText=When checked the Task appears in the next minute for the assigned Mechanic. \n\n\
 Otherwise the Task will only occur on \n\
   the morning of the selected Scheduling Date.
+complete=Complete
+cancel=Cancel
+maintenancePerform.caption=Perform Maintenance: %s
+operationalManual=Operational Manual
+remarkForNextMaintenance=Remark for next Maintenance
+comment=Comment
+remarkFromLastMaintenance=Remark from last Maintenance
+generalMaintenanceRemarks=General Maintenance Remarks
+overview=Overview
